<resources>
    <string name="app_name">LimiTx</string>
    <string name="card_icon_description">Icono de Tarjeta</string>
    <string name="card_name_placeholder">Nombre de la Tarjeta</string>
    <string name="card_number_placeholder">**** **** **** 1234</string>
    <string name="saldo_tarjeta_label">Saldo en Tarjeta: </string>
    <string name="extraccion_disponible_label">Extracción Disponible: </string>
    <string name="deposito_disponible_label">Depósito Disponible: </string>
    <string name="bank_name_placeholder">BANCO</string>
    <string name="menu_sort_title">Ordenar</string>
    <string name="menu_sort_name">Nombre (A-Z)</string>
    <string name="menu_sort_balance">Saldo en Tarjeta</string>
    <string name="menu_sort_extraction">Extracción Disponible</string>
    <string name="menu_sort_deposit">Depósito Disponible</string>

    <string name="action_add_card">Añadir Tarjeta</string>
    <string name="action_vew_history">Ver Historial de Transacciones</string>
    <string name="action_windows_config">Configurar Pestañas</string>
    <string name="action_logout">Cerrar Sesión</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_header_welcome">Bienvenido a LimiTx v1.3</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>

    <!-- Add Tarjeta Strings -->
    <string name="switch_tarjeta_tcp">Es tarjeta TCP</string>
    <string name="label_tipo_tarjeta">Tipo de Tarjeta</string>
    <string name="label_banco">Banco</string>
    <string name="label_moneda">Moneda</string>
    <string name="hint_nombre_tarjeta">Nombre de la tarjeta</string>
    <string name="hint_numero_tarjeta">Número de tarjeta</string>
    <string name="title_qr_dialog">Código QR Transferencia</string>
    <string name="hint_phone_number">Número de teléfono</string>
    <string name="toast_phone_saved">Número guardado</string>
    <string name="btn_close">Cerrar</string>
    <string name="label_saldo_actual">Saldo Actual</string>
</resources>