<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_card"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/action_add_card" />
        <item
            android:id="@+id/nav_view_history"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/action_vew_history" />
        <item
            android:id="@+id/nav_windows_config"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/action_windows_config" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/action_logout" />
        </menu>
    </item>
</menu>
